--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-toastify": "^6.0.9"
+    "react-toastify": "^6.0.9",
+    "react-transition-group": "^4.4.1",
+    "react-youtube": "^7.13.0"
   },
   "devDependencies": {
     "postcss-preset-env": "^6.7.0",
